# aa-base-plugin

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  README2.md  aa-dev-setup-windows-wsl.md  package-lock.json  package.json  pyproject.toml  setup.py  tox.ini
.github/workflows/: automated-checks.yml
aa_base_plugin/: __init__.py  apps.py  auth_hooks.py  models.py  urls.py  views.py
aa_base_plugin/templates/aa_base_plugin/: base.html  index.html
example/: __init__.py  apps.py  auth_hooks.py  models.py  tasks.py  urls.py  views.py
example/migrations/: 0001_initial.py
example/templates/example/: base.html  index.html
testauth/: celery.py  settings.py  urls.py
testauth/settings/: local.py
testauth/settings_aa4/: local.py
